# nationalite-entreprenariat-data

./: README.md  data-auto-entreprise-nationalite.csv  data-tout-confondu-nationalite.csv  pyproject.toml  visualize_nationalite.py
.github/workflows/: deploy.yml
nationalite-entreprise-viz/: package.json  pnpm-lock.yaml  vite.config.ts
nationalite-entreprise-viz/public/: data-auto-entreprise-nationalite.csv  data-societe-nationalite.csv
nationalite-entreprise-viz/src/: App.css  App.tsx  react-plotly.d.ts
